# Pythondaq

./: README.md  arduino_device.py  diode_experiment.py  metingen.csv  metingen_001.csv  metingen_met_error.csv  pyproject.toml  script.py  view.py
src/pythondaq/controllers/: arduino_device.py
src/pythondaq/models/: diode_experiment.py
src/pythondaq/views/: view.py
tests/: test_imports.py
