[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["vkpha <149399516+vkpha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyvisa = "^1.13.0"
matplotlib = "^3.8.1"
pyvisa-py = "^0.7.1"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scan_arduino = "pythondaq.views.view:main"